# cpp_template

./: CMakeLists.txt  Makefile  README.md  compile_flags.txt
includes/: main.hpp
srcs/: main.cpp
tests/: main_test.cpp
